--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Unblocking Your Inner Light</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Weirdos of Tinder #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Uncensored</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>AI Algo Trading: Mini NASDAQ Strategy Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>AI Algo Trading: Mini NASDAQ Strategy Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Unblocking Your Inner Light</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7964,7 +7964,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Uncensored</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Weirdos of Tinder #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
