--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">1 minutes ago</div>
+                        <div class="date">24 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>What Most Traders Around the World Are Doing Wrong</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Transcending death | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Unblocking Your Inner Light</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Weirdos of Tinder #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>Arthur Misses George🥹</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>"Peh- Pepperoni"🥀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>Don't Think Bach Got Arthur's Joke😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>Arthur Trolling Liv About Her Height For 25 Seconds🤏😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>"It's Like Avatar Crossed With Bang Bus"🤣</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2235,7 +2235,7 @@
                     <div class="video-info">
                         <h3>The Man Who changed the pizza Business forever!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2631,7 +2631,7 @@
                     <div class="video-info">
                         <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 03, 2025</div>
                     </div>
                 </a>
             </div>
@@ -2642,7 +2642,7 @@
                     <div class="video-info">
                         <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 03, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">1 minutes ago</div>
+                            <div class="date">24 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>What Most Traders Around the World Are Doing Wrong</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6678,7 +6678,7 @@
                         <div class="video-info">
                             <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 03, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -6689,7 +6689,7 @@
                         <div class="video-info">
                             <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 03, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Transcending death | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Unblocking Your Inner Light</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7953,7 +7953,7 @@
                         <div class="video-info">
                             <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9615,7 +9615,7 @@
                         <div class="video-info">
                             <h3>The Man Who changed the pizza Business forever!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Weirdos of Tinder #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Arthur Misses George🥹</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>"Peh- Pepperoni"🥀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10331,7 +10331,7 @@
                         <div class="video-info">
                             <h3>Don't Think Bach Got Arthur's Joke😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10386,7 +10386,7 @@
                         <div class="video-info">
                             <h3>Arthur Trolling Liv About Her Height For 25 Seconds🤏😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10408,7 +10408,7 @@
                         <div class="video-info">
                             <h3>"It's Like Avatar Crossed With Bang Bus"🤣</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
